--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=Wishlist
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:udq6u6TckmPCBQ+5KnFIY0mlhhDNT9DV4SBOcsbGP3Q=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=wishdb
 DB_PORT=3306
-DB_DATABASE=wish_list_app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=wishlist
+DB_USERNAME=sail
+DB_PASSWORD=laDidALadiDO07
+MYSQL_ROOT_PASSWORD=laDidALadiDO07
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -20,9 +21,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -47,3 +48,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
+
+WWWGROUP=1234
+WWWUSER=sail
