--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=wishdb
 DB_PORT=3306
 DB_DATABASE=wishlist
-DB_USERNAME=sail
-DB_PASSWORD=laDidALadiDO07
+DB_USERNAME=forge
+DB_PASSWORD=aAm4jBSuG8pr09yLGOm3
 MYSQL_ROOT_PASSWORD=laDidALadiDO07
 
 BROADCAST_DRIVER=log
