upd image location to env vars

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,5 @@ MEILISEARCH_HOST=http://meilisearch:7700
 
 WWWGROUP=1234
 WWWUSER=sail
+
+SNEAKER_IMAGES_LOCATION=https://www.sneakerdistrict.com/
