upd move api endpoints to env vars

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,5 @@ WWWGROUP=1234
 WWWUSER=sail
 
 SNEAKER_IMAGES_LOCATION=https://www.sneakerdistrict.com/
+SNEAKER_PRODUCTS_ENDPOINT=https://api.sneakerdistrict.com/products
+DOING_GOOD_PRODUCTS_ENDPOINT=https://www.doing-goods.com/wp-json/lamapress/v1/products
